--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Frontend"]
 	path = Frontend
 	url = https://github.com/sunny8080/task-manager-fed
+[submodule "Backend"]
+	path = Backend
+	url = https://github.com/sunny8080/task-manager-bed
